--- a/01_feature_extraction_data_exploration.ipynb
+++ b/01_feature_extraction_data_exploration.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "<p>\n",
-    "A lightweight supervised classification pipeline that distinguishes AI-generated speech from human-recorded speech using acoustic and spectral features.<br><br>\n",
+    "In this project, I will develop a lightweight supervised classification pipeline that distinguishes AI-generated speech from human-recorded speech using acoustic and spectral features.<br><br>\n",
     "However, this project faces a major constraint regarding sample size; with only 79 samples as of August 2025, I will work around these limitations through hyperparameter tuning and by incorporating Monte Carlo validations on different train-test splits.\n",
     "</p>\n",
     "\n",
